feat: init player ui

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .glassmorphism {
+    @apply relative border-1 border-white/20 bg-background/20 subpixel-antialiased shadow-small backdrop-blur backdrop-saturate-150;
+  }
+}
